[package]
name = "rsrelex"
version = "0.1.0"
authors = ["mwelt <michael.welt@non-of-your-bussiness.de>"]
edition = "2018"

[dependencies]
unicode-segmentation = "1.6.0"
quick-xml = "0.17.2"
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
hyper = "0.13.2"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.24"
getopts = "0.2.21"
regex = "1.3.5"
lazy_static = "1.4.0"
