[package]
name = "rsrelex"
version = "0.1.0"
authors = ["mwelt <michael.welt@non-of-your-bussiness.de>"]
edition = "2018"

[dependencies]
unicode-segmentation = "^1.6"
quick-xml = "^0.17"
bincode = "^1.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
hyper = "^0.13"
tokio = { version = "^0.2", features = ["full"] }
async-trait = "^0.1"
getopts = "^0.2"
regex = "^1.3"
lazy_static = "^1.4"
log = "^0.4"
env_logger = "^0.7"
rand = "^0"
assert_approx_eq = "^1"
ndarray = { version = "^0", features = ["rayon"] }
rayon = "^1"
